data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1940.wast
;; 1. **Test Description**: Create a `br_if` instruction targeting a `loop` block where the operand stack does not contain the required parameters for the loop's input type. Check that the `wizard_engine` throws an error due to invalid operand stack while WASM may not.

(assert_invalid
  (module
    (func $test
      (block
        (loop $label $loop (result i32)
          (br_if $label (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)